fix issues on firefox android
its probably better this way

--- a/lab/login/style.css
+++ b/lab/login/style.css
@@ -272,10 +272,10 @@
       background: linear-gradient(
         to right,
         #eaacb8 5%,
-        #7acbf5 42%,
-        var(--green) 42%,
-        var(--green) 55%,
-        #eaacb8 55%,
+        #7acbf5 40%,
+        var(--green) 40%,
+        var(--green) 53%,
+        #eaacb8 53%,
         #7acbf5 100%
       );
       -webkit-text-fill-color: transparent;
@@ -286,7 +286,9 @@
 }
 
 .name-PodeTond.💚::after {
-  content: " he/him   ";
+  content: "he/him";
+  width: 6em;
+  padding-left: 0.6em;
   background: linear-gradient(
     to right,
     #eaacb8 20%,
@@ -301,14 +303,16 @@
 
 .at-PodeTond.💚::after {
   content: "";
+  width:0;
+  padding-left:0;
   animation: none;
 }
 
 .at-PodeTond.💚 {
   background: linear-gradient(
     to right,
-   #eaacb8 20%,
-   #7acbf5 80%,
+    #eaacb8 20%,
+    #7acbf5 80%,
     var(--green) 80%,
     var(--green) 100%
   );
@@ -328,19 +332,19 @@
 
 @media (prefers-reduced-motion: no-preference) {
     @keyframes pronounce {
-            0%{content: " he/him   "; opacity:1} /* nbspaces for gradient */
+            0%{content: "he/him"; opacity:1}
          8.33%{opacity:1}
         16.66%{opacity:0}
            25%{opacity:1}
-        33.33%{content: " they/them"; opacity:1}
+        33.33%{content: "they/them"; opacity:1}
         41.66%{opacity:1}
            50%{opacity:0}
         58.33%{opacity:1}
-        66.66%{content: " she/her  "; opacity:1}
+        66.66%{content: "she/her"; opacity:1}
            75%{opacity:1}
         83.32%{opacity:0}
         91.66%{opacity:1}
-          100%{content: " he/him   "; opacity:1}
+          100%{content: "he/him"; opacity:1}
     }
 }
 
